# FFmpeg

./: .gitignore  CMakeLists.txt
Lib/FFmpeg/: CMakeLists.txt
Lib/SDL2/: CMakeLists.txt
src/: main.cpp
